--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    font-size: 62.5%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    width: 100%;
+    min-height: 100vh;
+    background-image: linear-gradient(130deg, rgb(255, 255, 255), rgba(255, 255, 255, 0.7)), url('https://previews.123rf.com/images/nemez210769/nemez2107691511/nemez210769151100060/49116620-euro-bills-euro-banknotes-money-european-union-currency.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    font-family: 'Quicksand', sans-serif;
+}
+
+@media screen and (max-width: 768px) {
+    html {
+        font-size: 50%;
+    }
 }
